fix: header z-index

--- a/src/sections/header/header_style.module.scss
+++ b/src/sections/header/header_style.module.scss
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 2;
+  z-index: 1000;
   background-color: $clr-neutral-1;
   transition: 0.3s ease-in-out;
   transition-property: top, background-color, color;
